Fix demo page styles and controls wrap (#43)
* fix demo page styles

* controls wrapped now

* restore formatting

--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,10 @@ video-player {
 
 .video-player__controls__container {
   display: flex;
+  flex-wrap: wrap;
+
   column-gap: 8px;
+  row-gap: 8px;
 
   order: 1;
 }
